# test-game-engine-editer

./: Cargo.toml  README.md  auto_ue5_editor.bat
apps/neoforge_editor/: Cargo.toml
apps/neoforge_editor/src/: app.rs  graph_ui.rs  main.rs  viewport.rs
crates/neoforge_core/: Cargo.toml
crates/neoforge_core/src/: assets.rs  io.rs  job.rs  lib.rs  (+7 more)
crates/neoforge_game/: Cargo.toml
crates/neoforge_graph/: Cargo.toml
crates/neoforge_physics/: Cargo.toml
crates/neoforge_plugins/: Cargo.toml
crates/neoforge_rendering/: Cargo.toml
crates/neoforge_runtime/: Cargo.toml
crates/neoforge_runtime/src/: vm.rs
crates/towngen_adapter/: Cargo.toml
editor_shell/: Cargo.toml
editor_shell/src/: app_core.rs  asset_registry.rs  command_system.rs  content_browser.rs  details.rs  docking.rs  lib.rs  menus.rs  outliner.rs  panels.rs  selection.rs  services.rs  tabs.rs  types.rs  undo.rs  viewport.rs
engine_core/: Cargo.toml
engine_core/examples/: full_system_demo.rs  tool_registry_demo.rs
engine_core/src/: aabb.rs  animation.rs  asset.rs  audio.rs  blueprints.rs  color.rs  ecs.rs  editor.rs  feature_registry.rs  font.rs  functions.rs  game_logic.rs  input.rs  lib.rs  logic_system.rs  main_menu.rs  mat2.rs  mat3.rs  mat4.rs  material.rs  math.rs  menus.rs  model.rs  modular_menu.rs  modules.rs  physics.rs  plane.rs  plugins.rs  quat.rs  ray.rs  rect.rs  rendering.rs  runtime.rs  scene.rs  scripting.rs  shader.rs  skeleton.rs  sound.rs  source_integrations.rs  statement_system.rs  (+9 more)
marketing/: ad_copy.txt
ue5_editor_shell/: Cargo.toml
ue5_editor_shell/src/: main.rs
(+152 files in other folders)
